2008-01-07 Braden McDaniel  <braden@endoframe.com>

	Doc-comment fixes and improvements.

	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/browser.cpp

2007-01-06 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.1 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac
	* src/Makefile.am: Updated libopenvrml libtool library version to
	8:1:0; updated libopenvrml-gl libtool library version to 7:1:0.

2008-01-06 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(get_polygons_(const std::vector<std::vector<openvrml::vec2f> >
	&)): Don't return a reference.

2008-01-06 Braden McDaniel  <braden@endoframe.com>

	Refactored text_node::glyph_geometry constructor.

	* src/libopenvrml/openvrml/vrml97node.cpp
	(get_polygons_(const std::vector<std::vector<openvrml::vec2f> >
	&)): Return a reference (to const).
	(get_connection_map(const polygon_ &)): Added function.  Get the
	map of positions at which the interior and corresponding exterior
	contours in a glyph are connected to form a polygon.
	(draw_glyph_polygon): Function object to emit coordinates and
	coordinate indices for polygons given a polygon_.
	(text_node::glyph_geometry::glyph_geometry(const
	std::vector<std::vector<openvrml::vec2f> > &, float, float)):
	Delegate to draw_glyph_polygon.

2008-01-05 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::vrml97_parse_actions::on_script_interface_decl_t::operator()(const
	node_interface &) const): Pop the children stack for eventIns and
	eventOuts after calling on_field_start since that doesn't get
	handled in any field value parsing.

2008-01-05 Braden McDaniel  <braden@endoframe.com>
